# airbyte

airbyte-integrations/connectors/destination-event-bridge/: README.md  main.py  metadata.yaml  setup.py
airbyte-integrations/connectors/destination-event-bridge/destination_event_bridge/: __init__.py  destination.py  spec.json
airbyte-integrations/connectors/destination-event-bridge/integration_tests/: configured_catalog.json
airbyte-integrations/connectors/source-generic-http/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-implementation/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-implementation/source_implementation/: __init__.py  client.py  source.py  util.py
airbyte-integrations/connectors/source-implementation/source_implementation/schemas/: generic_stream_implementation.json
airbyte-integrations/connectors/source-implementation/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
airbyte-integrations/connectors/source-syndigo/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-syndigo/sample_files/: sample_config.json
airbyte-integrations/connectors/source-syndigo/source_implementation/: run.py
airbyte-integrations/connectors/source-syndigo/source_implementation/schemas/: product.json
airbyte-integrations/connectors/source-syndigo/source_syndigo/: __init__.py  client.py  run.py  source.py  spec.json  spec.yaml
airbyte-integrations/connectors/source-syndigo/source_syndigo/schemas/: search_product.json
airbyte-integrations/connectors/source-syndigo/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
(+20 files in other folders)
